fixed background home image not showing

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -23,14 +23,14 @@ $large-desktop-width: 1500px;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
- background: url(home_background.jpg) no-repeat center center fixed;
+ background: image-url('home_background.jpg') no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
 
 @media (max-width: $breakpoint-tablet) {
-  background: url(mobile_home_background.jpg) no-repeat center center fixed;
+  background: image-url('mobile_home_background.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
